<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.ChooseLevelFragment">

        <TextView
            android:id="@+id/titleChooseLevelTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8.dp"
            android:text="@string/choose_level"
            android:textSize="32.dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/testButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8.dp"
            android:text="@string/test" />

        <Button
            android:id="@+id/easyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8.dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/easy" />

        <Button
            android:id="@+id/mediumButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8.dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/medium" />

        <Button
            android:id="@+id/hardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8.dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/hard" />

    </LinearLayout>
</layout>