<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation = "vertical"
        tools:context = ".presentation.WelcomeFragment">
        <ImageView
            android:layout_height = "180dp"
            android:layout_width="wrap_content"
            android:layout_margin="8.dp"
            android:gravity = "center"
            android:id = "@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/brain_image"
            android:src = "@drawable/brain_image"
            />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16.dp"
            android:textSize="32.dp"
            android:text="@string/welcome_title"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/ruleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16.dp"
            android:textSize="16.dp"
            android:text="@string/game_rules"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nextScreenButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16.dp"
            android:text="@string/ok"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>